# hw_python_web_fourteen

./: Pipfile  README.md  main.py  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16385/: pg_internal.init
postgres-data/global/: 1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16385.stat  global.stat
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16385.stat  global.stat
src/conf/: config.py
src/repository/: contacts.py  notes.py  users.py
src/routes/: auth.py  contacts.py  notes.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_route_auth.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_notes.py
