[tool.poetry]
name = "hw-python-web-fourteen"
version = "0.1.0"
description = ""
authors = ["Denys Filichkin <denys.philichkin@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_python_web_fourteen"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.3"
pydantic-settings = "^2.0.3"
fastapi = "^0.101.1"
cloudinary = "^1.34.0"
redis = "^5.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-mail = "^1.4.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
psycopg2-binary = "^2.9.7"
psycopg2 = "^2.9.7"
sqlalchemy = "^2.0.20"
pytest = "^7.4.0"



[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
